# coupon-mention-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
src/coupon_mention_tracker/: __init__.py  __main__.py  main.py
src/coupon_mention_tracker/clients/: __init__.py  database.py  database_client.py  google_sheets.py  google_sheets_client.py  looker.py  slack.py  slack_client.py
src/coupon_mention_tracker/core/: config.py  logger.py
src/coupon_mention_tracker/core/models/: __init__.py  coupon_mention.py
src/coupon_mention_tracker/db/: __init__.py  sql_query_builder.py  tables.py
src/coupon_mention_tracker/repositories/: ai_overview.py  ai_overview_repository.py  looker.py  looker_repository.py  sql_queries.py
src/coupon_mention_tracker/services/: __init__.py  coupon_matcher.py  report.py
tests/: test_main.py
tests/clients/: test_google_sheets.py  test_google_sheets_client.py  test_looker.py  test_slack.py
tests/core/: test_config.py  test_logger.py
tests/repositories/: test_ai_overview.py  test_ai_overview_repository.py  test_sql_queries.py
tests/services/: test_coupon_matcher.py  test_report.py
