[project]
name = "coupon-mention-tracker"
version = "0.1.0"
description = "Monitor coupon mentions in Google AI Overviews with Slack alerts and historical tracking"
readme = "README.md"
requires-python = ">=3.12, <3.14"
authors = [
    {name = "Vytautas BuneviÄius", email = "vytautas.bunevicius@nordsec.com"}
]
maintainers = [
    {name = "Nord Security Growth Marketing Department"}
]
keywords = ["coupon", "ai-overviews", "seo", "monitoring", "slack"]
dependencies = [
    "asyncpg==0.30.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "httpx==0.28.1",
    "google-api-python-client==2.157.0",
    "google-auth==2.37.0",
    "logfire==3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coupon_mention_tracker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 80
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
    "PL",
    "RUF",
    "TID",
    "D",
]
ignore = [
    "E501",
    "D203",
    "D213",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",
    "S101",
    "D100",
    "D103",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["coupon_mention_tracker"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
python-version = "3.12"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]
