[project]
name = "coupon-mention-tracker"
version = "0.1.0"
description = "Monitor coupon mentions in Google AI Overviews with Slack alerts and historical tracking"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Vytautas BuneviÄius", email = "vytautas.bunevicius@nordsec.com"}
]
maintainers = [
    {name = "Nord Security Growth Marketing Department"}
]
keywords = ["coupon", "ai-overviews", "seo", "monitoring", "slack"]
dependencies = [
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]==2.0.36",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "httpx==0.28.1",
    "google-api-python-client==2.157.0",
    "google-auth==2.37.0",
    "logfire==3.11.0",
    "slack-sdk>=3.27.0",
    "aiohttp>=3.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coupon_mention_tracker"]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 80
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PL",     # pylint
    "RUF",    # ruff-specific rules
    "TID",    # flake8-tidy-imports (forbid relative imports)
    "D",      # pydocstyle
    "S",      # flake8-bandit (security)
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "PLR0913", # too-many-arguments
    "PLC0415", # import-outside-toplevel
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",       # docstrings not required in tests
    "PLR2004", # magic-value-comparison
    "S101",    # assert usage
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["coupon_mention_tracker"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]
environment = { }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]
